# proxy/internal/modules/auth/controller/message.go
@@ -1,6 +1,6 @@
 package controller
 
 type User struct {
-	Username string `json:"username"`
+	Email    string `json:"email"`
 	Password string `json:"password"`
 }
